[project]
name = "Code in Blog"
authors = ["Ho Nghia Khang <hnkhang.dev@gmail.com>"]
readme = "README.md"
version = "0.1.0"
description = "A Template for AI module build with python!"


[tool.black]
line-length = 127
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
)/
'''

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
# Ignore warnings when testing
addopts = "-p no:warnings" # ignore PendingDeprecationWarning
filterwarnings = [
    "error",
    "ignore::UserWarning",
    # note the use of single quote below to denote "raw" strings in TOML
    'ignore:function ham\(\) is deprecated:DeprecationWarning',
]
